Added category textview to highscores cardview

--- a/app/src/main/res/layout/activity_category_window.xml
+++ b/app/src/main/res/layout/activity_category_window.xml
@@ -28,12 +28,12 @@
         android:id="@+id/button_sport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintEnd_toStartOf="@+id/button_music"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_1"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
         app:srcCompat="@drawable/sport_switcher" />
 
     <TextView
@@ -52,12 +52,12 @@
         android:id="@+id/button_music"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintEnd_toStartOf="@+id/button_food"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_sport"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_1"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
         app:srcCompat="@drawable/music_switcher" />
 
     <TextView
@@ -76,12 +76,12 @@
         android:id="@+id/button_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:onClick="categoryButtonPressed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_music"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_1"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
         app:srcCompat="@drawable/food_switcher" />
 
     <TextView
@@ -254,7 +254,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner_player_2"
+        android:id="@+id/spinner_player_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -265,14 +265,15 @@
         app:layout_constraintTop_toBottomOf="@+id/top_text" />
 
     <Spinner
-        android:id="@+id/spinner_player_1"
+        android:id="@+id/spinner_player_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@null"
         android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_1" />
 
 </android.support.constraint.ConstraintLayout>
