--- a/app/src/main/res/layout/activity_category_window.xml
+++ b/app/src/main/res/layout/activity_category_window.xml
@@ -20,7 +20,22 @@
         android:textColor="@android:color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2" />
+
+    <TextView
+        android:id="@+id/player_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/lobster_two_bold"
+        android:text="Choose player"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +48,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button_music"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
+        app:layout_constraintTop_toBottomOf="@+id/top_text"
         app:srcCompat="@drawable/sport_switcher" />
 
     <TextView
@@ -57,7 +72,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button_food"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_sport"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
+        app:layout_constraintTop_toBottomOf="@+id/top_text"
         app:srcCompat="@drawable/music_switcher" />
 
     <TextView
@@ -81,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_music"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_player_2"
+        app:layout_constraintTop_toBottomOf="@+id/top_text"
         app:srcCompat="@drawable/food_switcher" />
 
     <TextView
@@ -262,7 +277,7 @@
         android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text" />
+        app:layout_constraintTop_toBottomOf="@+id/player_text" />
 
     <Spinner
         android:id="@+id/spinner_player_2"
@@ -272,7 +287,6 @@
         android:background="@null"
         android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_player_1" />
 
