--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context="case2.iths.com.QuizGame.AboutActivity">
+    tools:context="case2.iths.com.QuizGame.Activities.AboutActivity">
 
     <TextView
         android:id="@+id/top_text"
