--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context="case2.iths.com.QuizGame.HighScoreActivity">
+    tools:context="case2.iths.com.QuizGame.Activities.HighScoreActivity">
 
     <TextView
         android:id="@+id/top_text"
