--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context="case2.iths.com.QuizGame.MainActivity">
+    tools:context="case2.iths.com.QuizGame.Activities.MainActivity">
 
     <TextView
         android:id="@+id/top_text"
