--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
     android:noHistory="true"
-    tools:context="case2.iths.com.QuizGame.ResultActivity"
+    tools:context="case2.iths.com.QuizGame.Activities.ResultActivity"
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
