--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context="case2.iths.com.QuizGame.SplashActivity">
+    tools:context="case2.iths.com.QuizGame.Activities.SplashActivity">
 
     <TextView
         android:id="@+id/developed_by_text"
