--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/played_category" />
 
     <TextView
-        android:id="@+id/text_geography"
+        android:id="@+id/text_correct_answers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -98,7 +98,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="0dp"
         android:textColor="@android:color/white"
         android:textSize="60sp"
         android:textStyle="bold"
@@ -115,9 +114,9 @@
         android:textColor="@android:color/white"
         android:textSize="70sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/save_amount_of_statements_result"
-        app:layout_constraintRight_toLeftOf="@+id/amount_of_correct_answers"
-        app:layout_constraintTop_toBottomOf="@+id/text_geography"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_correct_answers"
         tools:text="5" />
 
     <TextView
